# MCP_Server

./: .env  Dockerfile  requirements.txt
.github/workflows/: main_mcp-powergy.yml
src/: entrypoint.sh  gunicorn.conf.py  pyproject.toml
src/fastapi_app/: app.py
src/fastapi_app/routes/: copilot.py
src/fastapi_app/services/: copilot.py
